[package]
name = "mdbook-sitemap-generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utility to generate a sitemap.xml file for an mdbook project"
repository = "https://github.com/rxdn/mdbook-sitemap-generator"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"]}
clap = { version = "3", features = ["derive"] }
quick-xml = { version = "0", features = ["serialize"] }
